[package]
name = "tplinker"
description = "Interface to TPLink smart devices such as HS100, HS110 and LB110"
repository = "https://github.com/robyoung/tplinker"
version = "0.2.0"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["HS100", "HS110", "LB110", "TPLink"]
categories = ["api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2.33"
rayon = "1.2.1"
