[package]
name = "tplinker"
description = "Interface to TPLink smart devices such as HS100, HS110, LB110 and LB120"
repository = "https://github.com/robyoung/tplinker"
version = "0.4.3"
authors = ["Rob Young <rob@robyoung.digital>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["HS100", "HS110", "LB110", "LB120", "TPLink"]
categories = ["api-bindings"]


[dependencies]
byteorder = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = "2.33"
rayon = "1.5"
if-addrs = "0.6"
crossbeam = "0.8"
